# divrec

./: .gitignore  README.md  pyproject.toml
data/: fail_crest.csv  fail_internal.csv  pass_crest.csv
src/divrec/: __init__.py  cli.py
src/divrec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/divrec/audit/: audit_log.py  checksums.py
src/divrec/calc/: __init__.py  aggregation.py  entitlements.py  rounding.py
src/divrec/domain/: __init__.py  mapping.py  models.py
src/divrec/io/: __init__.py  crest_csv.py  internal_csv.py  outputs.py
src/divrec/recon/: __init__.py  breaks.py  reconcile.py
src/divrec/validate/: __init__.py  validate_crest.py  validate_internal.py
tests/: test_cli_golden.py  test_cli_hardening.py  test_crest_csv.py  test_entitlements.py  test_internal_csv.py  test_mapping.py  test_reconcile.py  test_rounding.py  test_smoke.py
